add logging into the table on ui